se colocó un subtitulo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
    <h1>Bienvenido a mi webside </h1>
    <hr>
+   <h2> <marquee> Mi tienda de Productos Técnologicos </marquee> </h2>
    <h2> Productos en venta </h2>
 </body>
 </html>
