Se agregó pie de página

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
    <hr>
    <h2> <marquee> Mi tienda de Productos Técnologicos </marquee> </h2>
    <h2> Productos en venta </h2>
+   <hr>
+   <h3> Todos los derechos reservados </h3>
 </body>
 </html>
